--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
     <div class = "mainNavBar col-sm-12 col-md-12 col-lg-12 col-xl-12">
       <div class = "container-fluid">
         <div class = "row">
-          <div class = "col-sm-4 col-md-4 col-lg-4 col-xl-4" style="text-align:right;">
+          <div class = "col-sm-4 col-md-4 col-lg-4 col-xl-4" style="text-align:right;padding-right: 0px;padding-bottom: .5em;">
               <span id = "titleApp"> M<span class = "titleSmall">OVIE</span>R<span class = "titleSmall">EC</span></span>
           </div>
           <div class = "col-sm-6 col-md-6 col-lg-6 col-xl-6" style="padding-left:0px;">
