--- a/src/app/main-navigation/main-navigation.component.html
+++ b/src/app/main-navigation/main-navigation.component.html
@@ -2,7 +2,14 @@
 <p-menubar [model]="items">
     <div style="height:100%;padding-top: 0.25em;padding-left: 5em;">
         <input type="text" pInputText placeholder="Search Movies or Theatres" style="width: 15em;">
-        <button pButton label="LogIn" icon="fa fa-sign-out" style="width: 7.5em;margin-left:.25em;"></button>
+        <button pButton label="LogIn" (click)="showDialog('login')" icon="fa fa-sign-out" style="width: 7.5em;margin-left:.25em;"></button>
+        <button pButton label="SignUp" (click)="showDialog('signup')" icon="fa fa-sign-out" style="width: 7.5em;margin-left:.25em;"></button>
     </div>
 </p-menubar>
 </div>
+<p-dialog header="LogIn" [(visible)]="displayLogin" closeOnEscape=true closable= true>
+    
+</p-dialog>
+<p-dialog header="SignUp" [(visible)]="displaySignup" closeOnEscape=true closable= true>
+    
+  </p-dialog>
