--- a/src/app/main-navigation/main-navigation.component.html
+++ b/src/app/main-navigation/main-navigation.component.html
@@ -7,9 +7,9 @@
     </div>
 </p-menubar>
 </div>
-<p-dialog header="LogIn" [(visible)]="displayLogin" closeOnEscape=true closable= true>
-    
+<p-dialog header="LogIn" [(visible)]="displayLogin" [modal]=true  [width]="350" [minWidth]="200" [minY]="70">
+    <app-signin></app-signin>
 </p-dialog>
-<p-dialog header="SignUp" [(visible)]="displaySignup" closeOnEscape=true closable= true>
-    
-  </p-dialog>
+<p-dialog header="SignUp" [(visible)]="displaySignup" [modal]=true [width]="350" [minWidth]="200" [minY]="70"  >
+    <app-signup></app-signup>
+</p-dialog>
