--- a/src/app/home-navigation/home-navigation.component.html
+++ b/src/app/home-navigation/home-navigation.component.html
@@ -1,15 +1,18 @@
-<div style="height:100%;padding-top: 0.5em;">
-  <p-menubar [model]="items">
-    <div style="height:100%;padding-top: 0.25em;padding-left: 5em;">
-      <input type="text" pInputText placeholder="Search Movies or Theatres" style="width: 15em;">
-      <button pButton label="LogIn" (click)="showDialog('login')" icon="fa fa-sign-out" style="width: 7.5em;margin-left:.25em;"></button>
-      <button pButton label="SignUp" (click)="showDialog('signup')" icon="fa fa-sign-out" style="width: 7.5em;margin-left:.25em;"></button>
-    </div>
-  </p-menubar>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+          <p-menubar [model]="items">
+              <div style="height:100%;padding-top: 0.25em;padding-left: 5em;">
+                  <input type="text" pInputText placeholder="Search Movies or Theatres">
+                  <button pButton label="LogOut" icon="fa fa-sign-out" style="margin-left:.25em;"></button>
+                  <button pButton (click)="showProfile()" icon="fa fa-user-circle" style="margin-left:.25em;"></button>
+              </div>
+          </p-menubar>
+      </div>
+
+  </div>
 </div>
-<p-dialog header="LogIn" [(visible)]="displayLogin" [modal]=true [width]="350" [minWidth]="200" [minY]="70">
+
+<p-dialog header="Profile" [(visible)]="displayProfile" [modal]=true [width]="350" [minWidth]="200" [minY]="70">
   <app-signin></app-signin>
-</p-dialog>
-<p-dialog header="SignUp" [(visible)]="displaySignup" [modal]=true [width]="350" [minWidth]="200" [minY]="70">
-  <app-signup></app-signup>
 </p-dialog>
