--- a/src/app/home-navigation/home-navigation.component.html
+++ b/src/app/home-navigation/home-navigation.component.html
@@ -4,7 +4,7 @@
           <p-menubar [model]="items">
               <div style="height:100%;padding-top: 0.25em;padding-left: 5em;">
                   <input type="text" pInputText placeholder="Search Movies or Theatres">
-                  <button pButton label="LogOut" icon="fa fa-sign-out" style="margin-left:.25em;"></button>
+                  <button pButton label="LogOut" routerLink ="/" icon="fa fa-sign-out" style="margin-left:.25em;"></button>
                   <button pButton (click)="showProfile()" icon="fa fa-user-circle" style="margin-left:.25em;"></button>
               </div>
           </p-menubar>
