Created the Profile page for logged in users and contains all the non editable fields from the User Registration Form.

--- a/src/app/home-navigation/home-navigation.component.html
+++ b/src/app/home-navigation/home-navigation.component.html
@@ -13,5 +13,5 @@
 </div>
 
 <p-dialog header="Profile" [(visible)]="displayProfile" [modal]=true [width]="350" [minWidth]="200" [minY]="70">
-    <app-signin></app-signin>
+    <app-user-profile></app-user-profile>
 </p-dialog>
