--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -1,3 +1,13 @@
-<p>
-  movie-details works!
-</p>
+<p-carousel headerText="Now Playing" [value]="movies">
+    <ng-template let-movie pTemplate="item">
+        <div class="ui-grid ui-grid-responsive">
+            <div class="ui-grid-row">
+                <div class="ui-grid-col-12"><img src="http://image.tmdb.org/t/p/w154{{movie.poster_path}}" width="200"></div>
+            </div>
+            
+        </div>
+        <div class="ui-grid-row">
+            <div class="ui-grid-col-6">{{movie.original_title}}</div>
+        </div>
+    </ng-template>
+</p-carousel>
