--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -9,7 +9,7 @@
                             <div class="ui-grid ui-grid-responsive">
                                 <div class="ui-grid-row">
                                     <div class="ui-grid-col-12">
-                                        <img src="http://image.tmdb.org/t/p/w154{{movie.poster_path}}" width="150">
+                                        <img src={{movie.poster_image_thumbnail}} width="150">
                                     </div>
                                 </div>
                                 
@@ -17,7 +17,7 @@
                             <div class="ui-grid-row">
                                 <div class="ui-grid-col-6">
                                     <span id = "movieTitle">
-                                            {{movie.original_title}}
+                                            {{movie.title}}
                                     </span>
                                 </div>
                             </div>
