--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,8 +1,16 @@
 <div class="container-fluid mainContainer" style="padding-top:1em;">
-  <div class="row">
+    <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+            <span class="ui-float-label">
+                <input id="float-input-uName" [(disabled)] = "editProfile" [(ngModel)]="user.userName" type="text" size="35" pKeyFilter="alphanum" pInputText>
+                <label for="float-input-uName">User Name</label>
+            </span>
+        </div>
+    </div>
+    <div class="row" style="padding-top:1.5em;">
       <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
           <span class="ui-float-label">
-              <input id="float-input-fName" [(disabled)] = "editProfile" [(ngModel)]="firstName" type="text" size="35" pKeyFilter="alpha" pInputText>
+              <input id="float-input-fName" [(disabled)] = "editProfile" [(ngModel)]="user.firstName" type="text" size="35" pKeyFilter="alpha" pInputText>
               <label for="float-input-fName">First Name</label>
           </span>
       </div>
@@ -10,7 +18,7 @@
   <div class="row" style="padding-top:1.5em;">
       <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <span class="ui-float-label">
-              <input id="float-input-lName" [(disabled)] = "editProfile" [(ngModel)]="lastName"  type="text" size="35" pKeyFilter="alpha" pInputText>
+              <input id="float-input-lName" [(disabled)] = "editProfile" [(ngModel)]="user.lastName"  type="text" size="35" pKeyFilter="alpha" pInputText>
               <label for="float-input-lName">Last Name</label>
           </span>
       </div>
@@ -18,28 +26,12 @@
   <div class="row" style="padding-top:1.5em;">
       <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <span class="ui-float-label">
-              <input id="float-input-email" [(disabled)] = "editProfile" [(ngModel)]="email" type="email" size="35" pKeyFilter="email" pInputText>
+              <input id="float-input-email" [(disabled)] = "editProfile" [(ngModel)]="user.userEmailId" type="email" size="35" pKeyFilter="email" pInputText>
               <label for="float-input-email">Email</label>
           </span>
       </div>
   </div>
-  <div class="row" style="padding-top:1.5em;">
-      <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-          <span class="ui-float-label">
-              <input id="float-input-uName" [(disabled)] = "editProfile" [(ngModel)]="userName" type="text" size="35" pKeyFilter="alphanum" pInputText>
-              <label for="float-input-uName">User Name</label>
-          </span>
-      </div>
-  </div>
-  <div class="row" style="padding-top:1.5em;">
-      <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-          <span class="ui-float-label">
-              <input pPassword id="float-input-pwd" [(disabled)] = "editProfile" [(ngModel)]="password" type="password" size="35" pInputText>
-              <label for="float-input-pwd">Password</label>
-          </span>
-      </div>
-  </div>
-
+  
   <div class="row" style="padding-top:1.5em;">
       <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <span class="ui-float-label">
@@ -51,7 +43,7 @@
   <div class="row" style="padding-top:1.5em;">
       <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <span class="ui-float-label">
-              <input id="float-input-mob" [(disabled)] = "editProfile" equired="true" minlength="10" maxlength="10" [(ngModel)]="mobile" type="text"
+              <input id="float-input-mob" [(disabled)] = "editProfile" equired="true" minlength="10" maxlength="10" [(ngModel)]="user.userContactNo" type="text"
                   size="35" pKeyFilter="pint" pInputText>
               <label for="float-input-mob">Mobile</label>
           </span>
@@ -60,7 +52,7 @@
   <div class="row" style="padding-top:1.5em;">
       <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <span class="ui-float-label">
-              <p-calendar id="float-input-dob" [(disabled)] = "editProfile" [(ngModel)]="dateOfBirth" [monthNavigator]="true" [yearNavigator]="true"
+              <p-calendar id="float-input-dob" [(disabled)] = "editProfile" [(ngModel)]="user.userDOB" [monthNavigator]="true" [yearNavigator]="true"
                   yearRange="1900:2018"></p-calendar>
               <label for="float-input-dob">Date Of Birth</label>
           </span>
