--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -67,6 +67,31 @@
         </div>
     </div>
     <div class="row" style="padding-top:1.5em;">
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+            <span class="ui-float-label">
+                <input id="float-input-uName" [(ngModel)]="user.userAddress" type="text" size="35" pKeyFilter="alphanum" pInputText>
+                <label for="float-input-uName">Address</label>
+            </span>
+        </div>
+    </div>
+    <div class="row" style="padding-top:1.5em;">
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+            <span class="ui-float-label">
+                <input id="float-input-uName" [(ngModel)]="user.userCity" type="text" size="35" pKeyFilter="alphanum" pInputText>
+                <label for="float-input-uName">City</label>
+            </span>
+        </div>
+    </div>
+    <div class="row" style="padding-top:1.5em;">
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+            <span class="ui-float-label">
+                <input id="float-input-mob" required="true" minlength="5" maxlength="5" [(ngModel)]="user.userPinCode" type="text"
+                    size="35" pKeyFilter="pint" pInputText>
+                <label for="float-input-mob">Zip</label>
+            </span>
+        </div>
+    </div>
+    <div class="row" style="padding-top:1.5em;">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
             <button pButton type="button" routerLink="/" (click)="showDialog()" label="Submit">
             </button>
