--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,3 +1,42 @@
-:host >>>.ui-calendar{
-    width: 35;
+.dropdown:hover .dropdown-menu {
+    display: block;
+    width: 100%;
+    border: none;
+    }
+
+body .ui-tabview .ui-tabview-panels{
+    color: #292828;
+}     
+label{
+    color: #020202;
+} 
+.button1 {
+    border-radius: 4px;
+    font-size: 1em;
+}
+.row{
+    padding-top:1.5em;
+}
+span.fa.fa-calendar{
+    height: 100%;
+    width: 100%;
+    color: rgb(56, 145, 204);
+}
+.input-group-addon{
+    padding-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    background-color: #ffffff;
+}
+.input-group-addon button{
+   
+    padding-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+}
+.button1{
+    background-color: rgb(56, 145, 204);
+    border-color: rgb(56, 145, 204);
 }
