--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,94 +1,71 @@
-<div class="container-fluid mainContainer" style="padding-top:1em;">
-    <div class="row">
-        <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
-            <span class="ui-float-label">
-                <input id="float-input-fName" [(ngModel)]="user.firstName" type="text" size="35" pKeyFilter="alpha" pInputText>
-                <label for="float-input-fName">First Name</label>
-            </span>
+<form (submit)="onRegisterSubmit()">
+    <div class="form-group">
+        <div class="container-fluid">
+            <div class="row">
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                    <label>First Name</label>
+                    <input type="text" [(ngModel)]="user.firstName" name="fName" class="form-control">
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                    <label>Last Name</label>
+                    <input type="text" [(ngModel)]="user.lastName" name="lName" class="form-control">
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                        <label>Date Of Birth</label>
+                        <div class="input-group">
+                          <input class="form-control" type="text" [(ngModel)]="user.userDOB" [ngModelOptions]="{standalone: true}" [minDate]="{year: 1938, month: 1, day: 1}"
+                          [maxDate]="{year: 2003, month: 12, day: 31}"
+                            ngbDatepicker #d="ngbDatepicker" />
+                          <div class="input-group-addon">
+                            <button (click)="d.toggle()">
+                              <span class="fa fa-calendar"></span>
+                            </button>
+                          </div>
+                        </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                    <label>Email</label>
+                    <input type="text" [(ngModel)]="user.userEmailId" name="mailId" class="form-control">
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                    <label>Mobile</label>
+                    <input type="text" [(ngModel)]="user.userContactNo" name="mobile" class="form-control">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                    <label>User Name</label>
+                    <input type="text" [(ngModel)]="user.userName" name="uName" class="form-control">
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                    <label>Password</label>
+                    <input type="password" [(ngModel)]="user.userPassword" name="pass" class="form-control">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                    <label>Address</label>
+                    <input type="text" [(ngModel)]="user.userAddress" name="addres" class="form-control">
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                    <label>City</label>
+                    <input type="text" [(ngModel)]="user.userCity" name="city" class="form-control">
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                    <label>Zip</label>
+                    <input type="text" [(ngModel)]="user.userPinCode" name="zip" class="form-control">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6" style="padding-left:15em;padding-top:1em;">
+                    <input type="submit" class="btn btn-primary button1" style="width: 20em;height: 3em;" value="Submit">
+                </div>
+            </div>
         </div>
     </div>
-    <div class="row" style="padding-top:1.5em;">
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            <span class="ui-float-label">
-                <input id="float-input-lName" [(ngModel)]="user.lastName"  type="text" size="35" pKeyFilter="alpha" pInputText>
-                <label for="float-input-lName">Last Name</label>
-            </span>
-        </div>
-    </div>
-    <div class="row" style="padding-top:1.5em;">
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            <span class="ui-float-label">
-                <input id="float-input-email" [(ngModel)]="user.userEmailId" type="email" size="35" pKeyFilter="email" pInputText>
-                <label for="float-input-email">Email</label>
-            </span>
-        </div>
-    </div>
-    <div class="row" style="padding-top:1.5em;">
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            <span class="ui-float-label">
-                <input id="float-input-uName" [(ngModel)]="user.userName" type="text" size="35" pKeyFilter="alphanum" pInputText>
-                <label for="float-input-uName">User Name</label>
-            </span>
-        </div>
-    </div>
-    <div class="row" style="padding-top:1.5em;">
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            <span class="ui-float-label">
-                <input pPassword id="float-input-pwd" [(ngModel)]="user.userPassword" type="password" size="35" pInputText>
-                <label for="float-input-pwd">Password</label>
-            </span>
-        </div>
-    </div>
-    <div class="row" style="padding-top:1.5em;">
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            <span class="ui-float-label">
-                <input id="float-input-mob" required="true" minlength="10" maxlength="10" [(ngModel)]="user.userContactNo" type="text"
-                    size="35" pKeyFilter="pint" pInputText>
-                <label for="float-input-mob">Mobile</label>
-            </span>
-        </div>
-    </div>
-    <div class="row" style="padding-top:1.5em;">
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            <span class="ui-float-label">
-                <p-calendar id="float-input-dob" [(ngModel)]="user.userDOB" [monthNavigator]="true" [yearNavigator]="true"
-                    yearRange="1900:2018"></p-calendar>
-                <label for="float-input-dob">Date Of Birth</label>
-            </span>
-        </div>
-    </div>
-    <div class="row" style="padding-top:1.5em;">
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            <span class="ui-float-label">
-                <input id="float-input-uName" [(ngModel)]="user.userAddress" type="text" size="35" pKeyFilter="alphanum" pInputText>
-                <label for="float-input-uName">Address</label>
-            </span>
-        </div>
-    </div>
-    <div class="row" style="padding-top:1.5em;">
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            <span class="ui-float-label">
-                <input id="float-input-uName" [(ngModel)]="user.userCity" type="text" size="35" pKeyFilter="alphanum" pInputText>
-                <label for="float-input-uName">City</label>
-            </span>
-        </div>
-    </div>
-    <div class="row" style="padding-top:1.5em;">
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            <span class="ui-float-label">
-                <input id="float-input-mob" required="true" minlength="5" maxlength="5" [(ngModel)]="user.userPinCode" type="text"
-                    size="35" pKeyFilter="pint" pInputText>
-                <label for="float-input-mob">Zip</label>
-            </span>
-        </div>
-    </div>
-    <div class="row" style="padding-top:1.5em;">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-            <button pButton type="button" routerLink="/" (click)="showDialog()" label="Submit">
-            </button>
-        </div>
-    </div>
-</div>
-<p-dialog [(visible)]="display" [modal]=true [showHeader]="false">
-    {{userMessage}}
-</p-dialog>
+
+</form>
