U63_T69- Added error class definer and restructured the form level validations.

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,7 +1,8 @@
 <form (submit)="onRegisterSubmit()">
     <div class="form-group">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row showError">
+                {{validationMessage}}
             </div>
             <div class="row">
                 <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
