U59_T70_Added the route configs for showing the list of movies.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,8 +18,7 @@
       </div>
       <div class = "row"  style="height:95%">
           <div class = "content col-sm-12 col-md-12 col-lg-12 col-xl-12">
-            <app-movie-details></app-movie-details>
-    
+            <router-outlet></router-outlet>
           </div>
         </div>
     </div>
