US_63_T69 - Email Validation Service and Flash Message Service for the Validation of User Inputs

--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -14,6 +14,11 @@ label{
     border-radius: 4px;
     font-size: 1em;
 }
+.alert-danger {
+    color: #fcfcfc;
+    background-color: #aa3d3d;
+    border-color: #883442;
+  }
 .row{
     padding-top:1.5em;
 }
