--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,70 +1,70 @@
 <form (submit)="onRegisterSubmit()">
-    <div class="form-group">
-        <div class="container-fluid">
-            <flash-messages></flash-messages>
-            <div class="row">
-                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                    <label>First Name</label>
-                    <input type="text" [(ngModel)]="user.firstName" name="fName" class="form-control">
-                </div>
-                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                    <label>Last Name</label>
-                    <input type="text" [(ngModel)]="user.lastName" name="lName" class="form-control">
-                </div>
-                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                        <label>Date Of Birth</label>
-                        <div class="input-group">
-                          <input class="form-control" type="text" [(ngModel)]="user.userDOB" [ngModelOptions]="{standalone: true}" [minDate]="{year: 1938, month: 1, day: 1}"
-                          [maxDate]="{year: 2003, month: 12, day: 31}"
-                            ngbDatepicker #d="ngbDatepicker" />
-                          <div class="input-group-addon">
-                            <button (click)="d.toggle()">
-                              <span class="fa fa-calendar"></span>
-                            </button>
-                          </div>
-                        </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-                    <label>Email</label>
-                    <input type="text" [(ngModel)]="user.userEmailId" name="mailId" class="form-control">
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-                    <label>Mobile</label>
-                    <input type="text" [(ngModel)]="user.userContactNo" name="mobile" class="form-control">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-                    <label>User Name</label>
-                    <input type="text" [(ngModel)]="user.userName" name="uName" class="form-control">
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-                    <label>Password</label>
-                    <input type="password" [(ngModel)]="user.userPassword" name="pass" class="form-control">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                    <label>Address</label>
-                    <input type="text" [(ngModel)]="user.userAddress" name="addres" class="form-control">
-                </div>
-                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                    <label>City</label>
-                    <input type="text" [(ngModel)]="user.userCity" name="city" class="form-control">
-                </div>
-                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                    <label>Zip</label>
-                    <input type="text" [(ngModel)]="user.userPinCode" name="zip" class="form-control">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6" style="padding-left:15em;padding-top:1em;">
-                    <input type="submit" click="onRegisterSubmit()" class="btn btn-primary button1" style="width: 20em;height: 3em;" value="Submit">
-                </div>
-            </div>
+  <div class="form-group">
+    <div class="container-fluid">
+      <flash-messages></flash-messages>
+      <div class="row">
+        <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+          <label>First Name</label>
+          <input type="text" [(ngModel)]="user.firstName" name="fName" class="form-control">
         </div>
+        <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+          <label>Last Name</label>
+          <input type="text" [(ngModel)]="user.lastName" name="lName" class="form-control">
+        </div>
+        <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+          <label>Date Of Birth</label>
+          <div class="input-group">
+            <input class="form-control" type="text" [(ngModel)]="user.userDOB" [ngModelOptions]="{standalone: true}" [minDate]="{year: 1938, month: 1, day: 1}"
+            [maxDate]="{year: 2003, month: 12, day: 31}"
+            ngbDatepicker #d="ngbDatepicker" />
+            <div class="input-group-addon">
+              <button (click)="d.toggle()">
+                <span class="fa fa-calendar"></span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <label>Email</label>
+          <input type="text" [(ngModel)]="user.userEmailId" name="mailId" class="form-control">
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <label>Mobile</label>
+          <input type="text" minlength="10" maxlength="10" (keypress)="keyPressForMobile($event)" [(ngModel)]="user.userContactNo" name="mobile" class="form-control">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <label>User Name</label>
+          <input type="text" [(ngModel)]="user.userName" name="uName" class="form-control">
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <label>Password</label>
+          <input type="password" [(ngModel)]="user.userPassword" name="pass" class="form-control">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+          <label>Address</label>
+          <input type="text" [(ngModel)]="user.userAddress" name="addres" class="form-control">
+        </div>
+        <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+          <label>City</label>
+          <input type="text" [(ngModel)]="user.userCity" name="city" class="form-control">
+        </div>
+        <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+          <label>Zip</label>
+          <input type="text" [(ngModel)]="user.userPinCode" name="zip" class="form-control">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6" style="padding-left:15em;padding-top:1em;">
+          <input type="submit" click="onRegisterSubmit()" class="btn btn-primary button1" style="width: 20em;height: 3em;" value="Submit">
+        </div>
+      </div>
     </div>
+  </div>
 
 </form>
