--- a/src/app/showtimes/showtimes.component.html
+++ b/src/app/showtimes/showtimes.component.html
@@ -5,6 +5,15 @@
         <div class="col-md-2 poster" >
 
         </div>
+        <div class="col-md-10">
+          <div class="row">
+            <div class="col-md-6">
+              <h2>
+                {{movieName}}
+              </h2>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
