--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -19,6 +19,35 @@ label{
     background-color: #aa3d3d;
     border-color: #883442;
   }
+  :host>>> .ui-widget {
+    font-size: 12px;
+  }
+  :host>>> .ui-widget {
+    font-size: 1.05em;
+  }  
+  :host>>> .ui-datepicker {
+      padding:0;
+      background-color:white;
+      color:black;
+      min-width:0;
+  }
+  :host>>> .ui-datepicker table {
+      margin: 0;
+      font-size:10px;
+  }
+  :host>>>  .ui-datepicker-year{
+    color:black;
+
+  }
+  :host>>>  .ui-datepicker-month{
+    color:black;
+
+  }
+  :host>>>  .ui-inputtext{
+    background-color:white;
+    color:black;
+    border:1px solid #ccc;
+  }
 .row{
     padding-top:1.5em;
 }
