--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -14,14 +14,7 @@
         <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
           <label>Date Of Birth</label>
           <div class="input-group">
-            <input class="form-control" type="text" [(ngModel)]="user.userDOB" [ngModelOptions]="{standalone: true}" [minDate]="{year: 1938, month: 1, day: 1}"
-            [maxDate]="{year: 2003, month: 12, day: 31}"
-            ngbDatepicker #d="ngbDatepicker" />
-            <div class="input-group-addon">
-              <button (click)="d.toggle()">
-                <span class="fa fa-calendar"></span>
-              </button>
-            </div>
+            <p-calendar [(ngModel)]="user.userDOB" name="dob" dateFormat="mm-dd-yy" [monthNavigator]="true" [yearNavigator]="true" yearRange="1900:2008" [showIcon]="true"></p-calendar>
           </div>
         </div>
       </div>
