US_59_T_70-MOdified route based in the name and fetching frorm the cookies.

--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -9,7 +9,7 @@
                             <div class="ui-grid ui-grid-responsive">
                                 <div class="ui-grid-row">
                                     <div class="ui-grid-col-12">
-                                        <img src={{movie.poster_image_thumbnail}} (click)='routeMovie(movie.id)' width="150">
+                                        <img src={{movie.poster_path}} (click)='routeMovie(movie.title,movie.poster_path)' width="150">
                                     </div>
                                 </div>
                                 
