--- a/src/app/showtimes/showtimes.component.html
+++ b/src/app/showtimes/showtimes.component.html
@@ -2,7 +2,7 @@
   <p-card>
     <div class="container-fluid" style="width:100%">
       <div class="row">
-        <div class="col-md-2 poster" >
+        <div class="col-md-2 poster"[ngStyle]="setMyStyle()" >
 
         </div>
         <div class="col-md-10">
