--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 
-<div class = "container-fluid mainContainer" style="height:700px;">
-    <div class = "row"  style="height:8%;">
+<div class = "container-fluid mainContainer" style="height:100em">
+    <div class = "row"  style="height:5%;">
       <div class = "mainNavBar col-sm-12 col-md-12 col-lg-12 col-xl-12">
         <div class = "container-fluid">
           <div class = "row">
