--- a/src/app/showtimes/showtimes.component.css
+++ b/src/app/showtimes/showtimes.component.css
@@ -17,3 +17,8 @@ padding-bottom: 0.2em;
 :host >>>  .ui-card-footer{
     height:0em;
 }
+.theatres{
+    border: 2px;
+    border-radius:10px;
+    background-color: #323232;
+}
