US_62_T_73- Open up trailer size and styling

--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -62,6 +62,6 @@
     </div>
 </div>
 
-<p-dialog header="Movie Trailer" [(visible)]="displayTrailer" [modal]=true [width]="700" [height]="700" [minWidth]="200" [minY]="70">
+<p-dialog header="Movie Trailer" onHide="closeDialog()" [(visible)]="displayTrailer" [modal]=true [width]="700" [height]="700" [minWidth]="200" [minY]="70">
     <app-trailer></app-trailer>
 </p-dialog>
