US89_T109- Added the functionality to dynamically fetch trailers and removed cookies implementation

--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -62,6 +62,7 @@
     </div>
 </div>
 
-<p-dialog header="Movie Trailer" onHide="closeDialog()" [(visible)]="displayTrailer" [modal]=true [width]="700" [height]="700" [minWidth]="200" [minY]="70">
-    <app-trailer></app-trailer>
+<p-dialog  [(visible)]="displayTrailer" header="Movie Trailer" [width]="700" [height]="700" [minWidth]="200" [minY]="70">
+    <app-trailer *ngIf="displayTrailer" [trailerUrl]='trailer'></app-trailer>
 </p-dialog>
+
